--- a/docs/javascript/모던 자바스크립트 딥 다이브/실행컨텍스트.mdx
+++ b/docs/javascript/모던 자바스크립트 딥 다이브/실행컨텍스트.mdx
@@ -65,3 +65,5 @@ x = 1;
 
    - 2.2 this 바인딩
    - 2.3 외부 렉시컬 환경에 대한 참조 결정
+
+자바스크립트 엔진은 함수를 어디서 호출했는지가 아니라 함수를 어디에 정의했는지에 따라 상위 스코프를 결정한다. 이를 렉시컬 스코프(정적 스코프)라고 한다.
