--- a/docs/javascript/이벤트루프.mdx
+++ b/docs/javascript/이벤트루프.mdx
@@ -8,4 +8,17 @@
 이런 처리 순서가 아주 중요한 이유는(마우스 좌표 변경이나 네트워크 통신에 의한 데이터 변경 같이 애플리케이션 환경에 변화를 주는 작업에 영향을 받지 않고)
 모든 마이크로태스크를 통일한 환경에서 처리할 수 있기 때문이다.
 
+이벤트 루프
+
+자바스크립트의 동시성을 지원하는 것이 이벤트루프이다.
+이벤트 루프는 콜스택에 현재 실행 중인 실행 컨텍스트가 있는지, 그리고 태스크 큐에 대기 중인 함수(콜백, 이벤트 핸들러 등)가
+있는지 반복해서 확인한다. 만약 콜 스택이 비어있고 태스크 큐에 대기 중인 함수가 있다면 이벤트 루프는 순차적(FIFO)으로
+태스크 큐에 대기 중인 함수를 콜 스택으로 이동시킨다. 이때 콜 스택으로 이동한 함수는 실행된다. 즉, 태스크 큐에 일시 보관된 함수들은
+비동기 처리 방식으로 동작한다.
+
+태스크 큐
+
+setTimeout이나 setInterval과 같은 비동기 함수의 콜백 함수 또는 이벤트 핸들러가 일시적으로 보관되는 영역이다.
+태스크 큐와는 별도로 프로미스 후속 처리 메서드이 콜백 함수가 일시적으로 보관되는 마이크로태스크 큐도 존재한다.
+
 - [이벤트 루프와 매크로태스크, 마이크로태스크](https://ko.javascript.info/event-loop)
