--- a/docs/network/면접/naver.com.mdx
+++ b/docs/network/면접/naver.com.mdx
@@ -16,8 +16,8 @@ import Image from '@site/src/components/Image';
 
 <br />
 
-사용자가 주소창에 텍스트를 입력하면 브라우저 프로세스 안에 UI 스레드가 텍스트가 search query인지
-URL인지를 판단한다.
+**사용자가 주소창에 텍스트를 입력하면 브라우저 프로세스 안에 UI 스레드가 텍스트가 search query인지
+URL인지를 판단한다.**
 
 - `search query`: 검색 엔진에게 전달
 - `URL`: network thread로 URL 값 전달 준비
@@ -28,6 +28,9 @@ URL인지를 판단한다.
   네트워크 통신을 위한 네트워크 스레드, 파일에 접근하기 위한 스토리즈 스레드등이 존재한다.
 - 검색어일 경우 검색 엔진 URL에 검색어를 결합해 페이지를 이동시키며 URL일 경우 네트워크 호출을 수행한다.
   이때부터 브라우저에는 로딩이 되고 있다는 표시가 나타나게 된다. 동시에 네트워크 스레드는 적절한 프로토콜로 요청을 처리하기 시작한다.
+
+브라우저가 URL에 적힌 값을 파싱해서 HTTP Request Message를 만들고, OS에 전송을 요청한다. 이 때,
+Domain으로 요청을 보낼 수 없기 때문에 DNS Lookup을 수행한다.
 
 ## Start Navigation
 
@@ -49,6 +52,19 @@ URL인지를 판단한다.
 DNS Lookup 과정은 크롬의 경우 브라우저 -> hosts 파일 -> DNS cache의 순서로 도메인에 매칭되는
 ip를 찾는다.
 일반적으로 설명하는 DNS Lookup은 루트 도메인 서버에서부터 서브 도메인 서버순으로 찾게된다.
+
+HTTP 요청 메시지는 TCP/IP 프로토콜을 사용하여 서버로 전송된다.
+
+이 요청은 프로토콜 스택이라는 OS에 내장된 네트워크 제어용 소프트웨어에 의해 패킷에 담기고 패킷에
+제어정보를 덧붙여 LAN 어댑터에 전송하고, LAN 어댑터는 이를 전기신호로 변환시켜 송출한다.
+
+패킷은 스위칭 허브 등을 경유하여 인터넷 접속용 라우터에서 ISP로 전달되고 인터넷으로 이동한다.
+액세스 회선에 의해 통신사용 라우터로 운반되고 인터넷의 핵심부로 전달된다. 고속 라우터들 사이로 목적지까지
+패킷이 흘러들어가게 된다. 핵심부를 통과한 패킷은 목적지의 LAN에 도착하고, 방화벽이 패킷을 검사한 후
+캐시 서버로 보내어 웹 서버에 갈 필요가 있는지 검사한다.
+
+웹 서버에 도착한 패킷은 프로토콜 스택이 패킷을 추출하여 메시지를 복원하고 웹 서버 애플리케이션에 넘긴다.
+애플리케이션은 요청에 대한 응답 데이터를 작성하여 클라이언트로 회송하고, 이는 전달된 방식 그대로 전송된다.
 
 :::info
 
@@ -127,6 +143,8 @@ ip를 찾는다.
 전달합니다. 렌더러 프로세스에서 내비게이션이 실행되었다는 것을 브라우저 프로세스가 확인하고
 나면 내비게이션이 완료되고 문서 로딩 단계가 시작됩니다.
 
+렌더링이 완료되면 렌더러 프로세스는 브라우저 프로세스로 로딩이 완료되었음을 알리고 UI 스레드의 로딩 표시를 중지한다.
+
 <Image
   src="https://user-images.githubusercontent.com/63354527/216108595-da7c2b9b-38f3-45d4-89e3-5dd822e18458.png"
   referenceLink="https://www.slideshare.net/deview/125-119068291"
@@ -135,25 +153,7 @@ ip를 찾는다.
 
 <br />
 
-브라우저가 URL에 적힌 값을 파싱해서 HTTP Request Message를 만들고, OS에 전송을 요청한다. 이 때,
-Domain으로 요청을 보낼 수 없기 때문에 DNS Lookup을 수행한다.
-
-DNS Lookup 과정은 크롬의 경우 브라우저 -> hosts 파일 -> DNS cache의 순서로 도메인에 매칭되는
-ip를 찾는다.
-일반적으로 설명하는 DNS Lookup은 루트 도메인 서버에서부터 서브 도메인 서버순으로 찾게된다.
-
-HTTP 요청 메시지는 TCP/IP 프로토콜을 사용하여 서버로 전송된다.
-
-이 요청은 프로토콜 스택이라는 OS에 내장된 네트워크 제어용 소프트웨어에 의해 패킷에 담기고 패킷에
-제어정보를 덧붙여 LAN 어댑터에 전송하고, LAN 어댑터는 이를 전기신호로 변환시켜 송출한다.
-
-패킷은 스위칭 허브 등을 경유하여 인터넷 접속용 라우터에서 ISP로 전달되고 인터넷으로 이동한다.
-액세스 회선에 의해 통신사용 라우터로 운반되고 인터넷의 핵심부로 전달된다. 고속 라우터들 사이로 목적지까지
-패킷이 흘러들어가게 된다. 핵심부를 통과한 패킷은 목적지의 LAN에 도착하고, 방화벽이 패킷을 검사한 후
-캐시 서버로 보내어 웹 서버에 갈 필요가 있는지 검사한다.
-
-웹 서버에 도착한 패킷은 프로토콜 스택이 패킷을 추출하여 메시지를 복원하고 웹 서버 애플리케이션에 넘긴다.
-애플리케이션은 요청에 대한 응답 데이터를 작성하여 클라이언트로 회송하고, 이는 전달된 방식 그대로 전송된다.
+렌더러 프로세스는 HTML, CSS, JavaScript를 사용자와 상호작용할 수 있는 웹 페이지로 변환한다.
 
 ## 요약
 
