--- a/docs/react/에러바운더리.mdx
+++ b/docs/react/에러바운더리.mdx
@@ -4,4 +4,5 @@ setTimeout이나 프로미스 후속 처리 메서드의 콜백 함수는 태스
 이때 콜 스택에 푸시된 콜백 함수의 실행컨텍스트는 콜 스택의 가장 하부에 위치한다.
 따라서 에러를 전파할 호출자가 존재하지 않는다.
 
+- (ErrorBoundary 가 포착할 수 없는 에러와 그 이론적 원리 분석)[https://happysisyphe.tistory.com/66]
 - 모던 자바스크립트 Deep Dive
