--- a/docs/web/Docker.mdx
+++ b/docs/web/Docker.mdx
@@ -4,4 +4,5 @@ Dockerfile을 작성하여 도커 이미지를 만들 수 있습니다.
 도커 이미지를 구성하도록 파일내에 작성되는 인스트럭션 하나하나가 이미지 레이어를 구성한다.
 인스트럭션과 이미지 레이어는 1:1 관계를 갖습니다.
 인스트럭션 실행마다 실행결과 해시를 갖게 되는데 중간에서 다른 해시 결과가 발생하면 남은 인스트럭션 모두 새롭게 이미지 레이어를 구성하게 됩니다.
-**이 점이 매우 중요합니다. 결론부터 먼저 이야기드리면 좀처럼 수정될 일이 없는 인스트럭션일수록 도커 파일 스크립트의 상단에 위치시키고 수정이 잦은 동적인 인스트럭션은 스크립트의 하단에 위치시키는 것을 통해 이미지 레이어 캐싱의 효과를 최대화 할 수 있습니다.**
+**
+좀처럼 수정될 일이 없는 인스트럭션일수록 도커 파일 스크립트의 상단에 위치시키고 수정이 잦은 동적인 인스트럭션은 스크립트의 하단에 위치시키는 것을 통해 이미지 레이어 캐싱의 효과를 최대화 할 수 있습니다.**
