--- a/docs/javascript/제너레이터.mdx
+++ b/docs/javascript/제너레이터.mdx
@@ -1,7 +1,9 @@
 1. 제너레이터 함수는 함수의 호출자에게 실행의 제어권을 양도할 수 있다.
 
-일반 함수를 호출하면 제어권이 함수에게 넘어가고 함수 코들르 일괄실행한다. 즉, 함수 호출자는 함수를 호출한 이후 함수의 실행을 제어할 수 없다.
-다시 말해 함수 호출자가 함수 실행을 일시 중지시키거나 재개시킬 수 있다. 이는 함수의 제어권을 함수가 독점하는 것이 아니라 함수의 호출자에게 양도할 수 있다는 것을 의미한다.
+일반 함수를 호출하면 제어권이 함수에게 넘어가고 함수 코드를 일괄실행한다.
+즉, 함수 호출자는 함수를 호출한 이후 함수의 실행을 제어할 수 없다.
+다시 말해 함수 호출자가 함수 실행을 일시 중지시키거나 재개시킬 수 있다.
+이는 함수의 제어권을 함수가 독점하는 것이 아니라 함수의 호출자에게 양도할 수 있다는 것을 의미한다.
 
 2. 제너레이터 함수는 함수 호출자와 함수의 상태를 주고받을 수 있다.
 
@@ -11,7 +13,7 @@
 제너레이터 함수는 함수 호출자와 양방향으로 함수의 상태를 주고받을 수 있다. 다시 말해, 제너레이터 함수 호출자에게 상태를 전달할 수 있고 함수 호출자로부터 상태를
 전달받을 수도 있다.
 
-3. 제너레이터 함수를 호출하면 제너레이터 객체를 반환한다.
+3. 제너레이터 함수를 호출하면 제너레이터 객체를 반환한다.(이는 이터레이터이다)
 
 일반 함수를 호출하면 함수 코드를 일괄 실행하고 값을 반환한다. 제너레이터 함수를 호출하면 함수 코드를 실행하는 것이 아니라 이터러블이면서 동시에 이터레이터인 제너레이터 객체를 반환한다.
 
